// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginCard should render 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div
      class="sc-AxiKw ikHNGi border-theme-primary-contrast hover:border-theme-background"
      data-testid="Card"
    >
      <div
        class="my-auto font-semibold"
      >
        <div
          class="PluginCard__PluginImageContainer-ixmao2-0 dYuRva"
        >
          <svg>
            changenow-logo.svg
          </svg>
        </div>
        <div
          class="flex items-center mb-2 space-x-2 text-lg text-theme-primary"
        >
          <div>
            ARK Explorer
          </div>
          <div />
        </div>
        <div
          class="flex space-x-4 text-sm text-theme-neutral-light"
        >
          <div
            class="pr-4 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
          >
            ARK.io
          </div>
          <div>
            <div
              class="flex"
              data-testid="ReviewRating"
            >
              <div
                class="relative my-auto"
              >
                <div
                  class="absolute overflow-hidden"
                  style="width: 80%;"
                >
                  <svg
                    class="text-theme-warning-400 w-5"
                  >
                    star.svg
                  </svg>
                </div>
                <svg
                  class="text-theme-neutral w-5"
                >
                  star.svg
                </svg>
              </div>
              <span
                class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
              >
                4.2
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render grant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div
      class="sc-AxiKw ikHNGi border-theme-primary-contrast hover:border-theme-background"
      data-testid="Card"
    >
      <div
        class="my-auto font-semibold"
      >
        <div
          class="PluginCard__PluginImageContainer-ixmao2-0 dYuRva"
        >
          <svg>
            changenow-logo.svg
          </svg>
        </div>
        <div
          class="flex items-center mb-2 space-x-2 text-lg text-theme-primary"
        >
          <div>
            ARK Explorer
          </div>
          <div>
            <div
              class="sc-AxjAm buCJuk"
              height="20"
              width="20"
            >
              <svg>
                grant.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="flex space-x-4 text-sm text-theme-neutral-light"
        >
          <div
            class="pr-4 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
          >
            ARK.io
          </div>
          <div>
            <div
              class="flex"
              data-testid="ReviewRating"
            >
              <div
                class="relative my-auto"
              >
                <div
                  class="absolute overflow-hidden"
                  style="width: 80%;"
                >
                  <svg
                    class="text-theme-warning-400 w-5"
                  >
                    star.svg
                  </svg>
                </div>
                <svg
                  class="text-theme-neutral w-5"
                >
                  star.svg
                </svg>
              </div>
              <span
                class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
              >
                4.2
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render official icon 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div
      class="sc-AxiKw ikHNGi border-theme-primary-contrast hover:border-theme-background"
      data-testid="Card"
    >
      <div
        class="my-auto font-semibold"
      >
        <div
          class="PluginCard__PluginImageContainer-ixmao2-0 dYuRva"
        >
          <svg>
            changenow-logo.svg
          </svg>
        </div>
        <div
          class="flex items-center mb-2 space-x-2 text-lg text-theme-primary"
        >
          <div>
            ARK Explorer
          </div>
          <div>
            <div
              class="sc-AxjAm vZRQY"
              height="16"
              width="16"
            >
              <svg>
                official-ark-plugin.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="flex space-x-4 text-sm text-theme-neutral-light"
        >
          <div
            class="pr-4 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
          >
            ARK.io
          </div>
          <div>
            <div
              class="flex"
              data-testid="ReviewRating"
            >
              <div
                class="relative my-auto"
              >
                <div
                  class="absolute overflow-hidden"
                  style="width: 80%;"
                >
                  <svg
                    class="text-theme-warning-400 w-5"
                  >
                    star.svg
                  </svg>
                </div>
                <svg
                  class="text-theme-neutral w-5"
                >
                  star.svg
                </svg>
              </div>
              <span
                class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
              >
                4.2
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should trigger delete 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div
      class="sc-AxiKw ikHNGi border-theme-primary-contrast hover:border-theme-background"
      data-testid="Card"
    >
      <div
        class="my-auto font-semibold"
      >
        <div
          class="PluginCard__PluginImageContainer-ixmao2-0 dYuRva"
        >
          <svg>
            changenow-logo.svg
          </svg>
        </div>
        <div
          class="flex items-center mb-2 space-x-2 text-lg text-theme-primary"
        >
          <div>
            ARK Explorer
          </div>
          <div />
        </div>
        <div
          class="flex space-x-4 text-sm text-theme-neutral-light"
        >
          <div
            class="pr-4 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
          >
            ARK.io
          </div>
          <div>
            <div
              class="flex"
              data-testid="ReviewRating"
            >
              <div
                class="relative my-auto"
              >
                <div
                  class="absolute overflow-hidden"
                  style="width: 80%;"
                >
                  <svg
                    class="text-theme-warning-400 w-5"
                  >
                    star.svg
                  </svg>
                </div>
                <svg
                  class="text-theme-neutral w-5"
                >
                  star.svg
                </svg>
              </div>
              <span
                class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
              >
                4.2
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
      >
        <div
          class="relative"
          data-testid="dropdown__toggle"
        >
          <div
            class="sc-AxjAm khqMzO p-2 cursor-pointer text-theme-neutral-400 hover:text-theme-neutral-500"
            height="20"
            width="4"
          >
            <svg>
              settings.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should trigger view 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div
      class="sc-AxiKw goGrTz border-theme-primary-contrast hover:border-theme-background"
      data-testid="Card"
    >
      <div
        class="my-auto font-semibold"
      >
        <div
          class="PluginCard__PluginImageContainer-ixmao2-0 dYuRva"
        >
          <svg>
            changenow-logo.svg
          </svg>
        </div>
        <div
          class="flex items-center mb-2 space-x-2 text-lg text-theme-primary"
        >
          <div>
            ARK Explorer
          </div>
          <div />
        </div>
        <div
          class="flex space-x-4 text-sm text-theme-neutral-light"
        >
          <div
            class="pr-4 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
          >
            ARK.io
          </div>
          <div>
            <div
              class="flex"
              data-testid="ReviewRating"
            >
              <div
                class="relative my-auto"
              >
                <div
                  class="absolute overflow-hidden"
                  style="width: 80%;"
                >
                  <svg
                    class="text-theme-warning-400 w-5"
                  >
                    star.svg
                  </svg>
                </div>
                <svg
                  class="text-theme-neutral w-5"
                >
                  star.svg
                </svg>
              </div>
              <span
                class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
              >
                4.2
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
      >
        <div
          class="relative"
          data-testid="dropdown__toggle"
        >
          <div
            class="sc-AxjAm khqMzO p-2 cursor-pointer text-theme-neutral-400 hover:text-theme-neutral-500"
            height="20"
            width="4"
          >
            <svg>
              settings.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
